Revert "fix(elements|ino-icon): improve vertical alignment (#1234)"
This reverts commit 6f4b4a479b6bc40e33ab6086619b6d0c60cfa4b6.

--- a/packages/elements/src/components/ino-icon/ino-icon.scss
+++ b/packages/elements/src/components/ino-icon/ino-icon.scss
@@ -21,7 +21,6 @@
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
-  vertical-align: middle;
 
   i {
     font-size: inherit;
